--- a/public/styles/chat.css
+++ b/public/styles/chat.css
@@ -1,69 +1,69 @@
 #message-form {
-    padding: 0.25rem;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    display: flex;
-    height: 3rem;
-    box-sizing: border-box;
-    backdrop-filter: blur(10px);
+  padding: 0.25rem;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  height: 3rem;
+  box-sizing: border-box;
+  backdrop-filter: blur(10px);
 }
 
 #message-input {
-    padding: 0 1rem;
-    flex-grow: 1;
-    margin-right: 0.25rem;
+  padding: 0 1rem;
+  flex-grow: 1;
+  margin-right: 0.25rem;
 }
 
 #message-input:focus {
-    outline: none;
+  outline: none;
 }
 
 #messages {
-    list-style-type: none;
-    position: fixed;
-    padding: 0;
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-    width: 100%;
-    margin-top: 37px;
+  list-style-type: none;
+  position: fixed;
+  padding: 0;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  width: 100%;
+  margin-top: 37px;
 }
 
-#messages>li {
-    padding: 0.5rem 1rem;
+#messages > li {
+  padding: 0.5rem 1rem;
 }
 
 #logout {
-    position: fixed;
+  position: fixed;
 }
 
 .own-message {
-    align-self: flex-end;
+  align-self: flex-end;
 }
 
 .own-message > .message-content {
-    background-color: #FAD9FC;
-    padding: 10px;
-    border-radius: 0.5rem;
-    float: right;
+  background-color: #fad9fc;
+  padding: 10px;
+  border-radius: 0.5rem;
+  float: right;
 }
 
 .message-header {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 .other-message {
-    align-self: flex-start;
+  align-self: flex-start;
 }
 
 .other-message > .message-content {
-    background-color: #F2F8F9;
-    padding: 10px;
-    border-radius: 0.5rem;
+  background-color: #f2f8f9;
+  padding: 10px;
+  border-radius: 0.5rem;
 }
 
 .message-content {
-    width: fit-content;
+  width: fit-content;
 }
